kubectl_deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nettest-service
  labels:
    app: nettest-service
spec:
  ports:
  - port: 4567
    name: http
    targetPort: 4567
  selector:
    app: nettest
